# accelerometer.rs

./: .travis.yml  CHANGES.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: accelerometer.rs  error.rs  f32ext.rs  lib.rs  orientation.rs  reading.rs  vector.rs
src/orientation/: mod.rs  tracker.rs
src/tracking/: mod.rs  orientation.rs  samples.rs  tracker.rs
src/vector/: component.rs  iter.rs  mod.rs  xy.rs  xyz.rs
