[package]
name        = "accelerometer"
description = """
Generic, embedded-friendly accelerometer support, including
traits and types for taking readings from 2 or 3-axis
accelerometers and tracking device orientations.
"""
version     = "0.8.1"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "Apache-2.0 OR MIT"
repository  = "https://github.com/NeoBirth/accelerometer.rs"
readme      = "README.md"
edition     = "2018"
categories  = ["embedded", "hardware-support", "no-std"]
keywords    = ["acceleration", "position", "tracking"]

[dependencies]
micromath = "0.4"

[features]
default = ["orientation"]
orientation = []

[badges]
travis-ci = { repository = "NeoBirth/accelerometer.rs" }
